--- a/pages/main.html
+++ b/pages/main.html
@@ -5,11 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="../css/style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hardware store</title>
 </head>
 <body>
-    <div class="block">
-        <span>Привет, здесь будет крутой сайт</span>
-    </div>
+    <div class="block">Проверка связи</div>
 </body>
 </html>
