первый день закончен

--- a/pages/main.html
+++ b/pages/main.html
@@ -3,11 +3,75 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/Hardware.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hardware store</title>
 </head>
-<body>
-    <div class="block">Проверка связи</div>
+<body class="body">
+    <header class="header">
+        <div class="header__wrapper">
+            <div class="header__container container">
+                <div class="header__main">
+                    <a href="" class="header__logo">Funiro.</a>
+                    <div class="header__menu menu">
+                        <nav class="menu__body" >
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Products</a>
+                                    <button data-spoiler type="button" class="menu__arrow"><img src="../" alt="icon-down"></button>
+                                    <ul class="menu__sub-list">
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Rooms</a>
+                                    <button data-spoiler type="button" class="menu__arrow"><img src="../" alt="icon-down"></button>
+                                    <ul class="menu__sub-list">
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                        <li class="menu__sub-item">
+                                            <a href="" class="menu__sub-link"></a>
+                                        </li>
+                                    </ul>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Inspirations</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+                <div class="header__search">
+    
+                </div>
+                <div class="header__actions actions-header">
+    
+                </div>
+                <button type="button" class="header__menu menu-burger">
+                    <span></span>
+                    <span></span>
+                    <span></span>
+                </button>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
