--- a/pages/_header.html
+++ b/pages/_header.html
@@ -7,27 +7,76 @@
                     <nav class="menu__body" >
                         <ul class="menu__list">
                             <li class="menu__item">
-                                <a href="" class="menu__link">Products</a>
+                                <a href="#" class="menu__link">Products</a>
+                                <button type="button" class="menu__arrow"><img src="../img/icons/arrow-down.svg" alt="icon-down" class="menu__arrow-icon"></button>
+                                <ul class="menu__sub-list">
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Product #1</a>
+                                    </li>
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Product #2</a>
+                                    </li>
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Product #3</a>
+                                    </li>
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Product #4</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu__item">
-                                <a href="" class="menu__link">Rooms</a>
+                                <a href="#" class="menu__link">Rooms</a>
+                                <button type="button" class="menu__arrow"><img src="../img/icons/arrow-down.svg" alt="icon-down" class="menu__arrow-icon"></button>
+                                <ul class="menu__sub-list">
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Room #1</a>
+                                    </li>
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Room #2</a>
+                                    </li>
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Room #3</a>
+                                    </li>
+                                    <li class="menu__sub-item">
+                                        <a href="" class="menu__sub-link">Room #4</a>
+                                    </li>
+                                </ul>
                             </li>
                             <li class="menu__item">
-                                <a href="" class="menu__link">Inspirations</a>
+                                <a href="#" class="menu__link">Inspirations</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </div>
-            <div class="header__search">
-
+            <div class="header__search search">
+                <div class="search-form">
+                    <button type="button" class="search-form__btn-hidden"></button>
+                    <form action="" class="search-form__item">
+                        <button type="button" class="search-form__btn"><img src="../img/icons/search.svg" alt="" class="search-form__icon"></button>
+                        <input autocomplete="off" type="text" data-value="Search for minimalist chair" placeholder="Search for minimalist chair" class="search-form-input">
+                    </form>
+                </div>
             </div>
             <div class="header__actions actions-header">
+                <a href="#" class="actions-header__item actions-header__item-favorites">
+                    <img src="../img/icons/heart.svg" alt="heart icon" class="actions-heart">
+                </a>
+                <div class="actions-header__item cart-header">
+                    <a href="#" class="cart-header__icon">
+                        <img src="../img/icons/cart.svg" alt="cart icon" class="actions-cart"><span>1</span>
+                    </a>
+                    <div class="cart-header__body">
+                        <ul class="cart-header__list cart-list">
 
+                        </ul>
+                    </div>
+                </div>
+                <a href="#" class="actions-header__item actions-header__item_user">
+                    <img src="../img/avatar.jpg" alt="avatar" class="actions-avatar">
+                </a>
             </div>
-            <button type="button" class="header__menu menu-burger">
-                <span></span>
-                <span></span>
+            <button type="button" class="header__burger menu-icon">
                 <span></span>
             </button>
         </div>
