--- a/pages/index.html
+++ b/pages/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <link rel="stylesheet" href="../css/iconsFont.css">
     <link rel="stylesheet" href="../css/Hardware.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -113,8 +114,8 @@
 
                                     </div>
                                     <div class="control-slider-main__arrows slider-arrows">
-                                        <button class="slider-arrow slider-arrow_prev"><img src="../img/icons/slider-icon-right.svg" alt="slider arrow left"></button>
-                                        <button class="slider-arrow slider-arrow_next"><img src="../img/icons/slider-icon-right.svg" alt="slider arrow right"></button>
+                                        <button class="slider-arrow slider-arrow_prev _icon-p-left"></button>
+                                        <button class="slider-arrow slider-arrow_next _icon-p-right"></button>
                                     </div>
                                 
                                 </div>
